Changed the padding around picture for smartphone breakpoint, to avoid that the picture is not centered.

--- a/css/style.css
+++ b/css/style.css
@@ -586,5 +586,10 @@ img {
 
         padding: 5%;
     }
+
+    #picture-location {
+
+        padding:10% 0;
+    }
 }
 /*--------- ----------------- ----------*/
